Add jpackage tasks for native macOS, Windows and Linux builds